# nonebot-plugin-dialogue

./: README.md  pyproject.toml
nonebot_plugin_dialogue/: __init__.py  utils.py
